--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   ],
   "rewrites": [
     {
-      "source": "/((?!_next/static|_next/image|favicon.ico|api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
