Fix policy links to use React Router navigation instead of href

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,14 @@
   ],
   "rewrites": [
     {
+      "source": "/privacy-policy",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/terms-of-service",
+      "destination": "/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
