--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "highlight.js": "^11.9.0",
     "i18next": "^23.15.1",
     "input-otp": "^1.2.4",
+    "jsotp": "^1.0.4",
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
-    "otplib": "^12.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
