--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "highlight.js": "^11.9.0",
     "i18next": "^23.15.1",
     "input-otp": "^1.2.4",
-    "jsotp": "^1.0.4",
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
@@ -66,6 +65,7 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "speakeasy": "^2.0.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
