--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "highlight.js": "^11.9.0",
     "i18next": "^23.15.1",
     "input-otp": "^1.2.4",
+    "jsotp": "^1.0.4",
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
@@ -61,6 +62,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.2",
+    "react-otp-input": "^3.1.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
