Fix TOTP synchronization with speakeasy + qrcode.react - unified implementation for reliable 2FA

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "highlight.js": "^11.9.0",
     "i18next": "^23.15.1",
     "input-otp": "^1.2.4",
-    "jsotp": "^1.0.4",
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,6 +67,7 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "speakeasy": "^2.0.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
