Fix vercel.json - use modern rewrites/redirects instead of routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,43 @@
 {
   "version": 2,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/beta",
-      "dest": "/website/beta-promo-system.html"
+      "source": "/beta",
+      "destination": "/website/beta-promo-system.html"
     },
     {
-      "src": "/beta/(.*)",
-      "dest": "/website/beta-promo-system.html"
+      "source": "/beta/(.*)",
+      "destination": "/website/beta-promo-system.html"
     },
     {
-      "src": "/app",
-      "status": 302,
-      "headers": {
-        "Location": "https://restaurant-app-xi-ashy.vercel.app"
-      }
+      "source": "/",
+      "destination": "/website/index.html"
     },
     {
-      "src": "/app/(.*)",
-      "status": 302,
-      "headers": {
-        "Location": "https://restaurant-app-xi-ashy.vercel.app/$1"
-      }
+      "source": "/(.*)",
+      "destination": "/website/$1"
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/app",
+      "destination": "https://restaurant-app-xi-ashy.vercel.app",
+      "permanent": false
     },
     {
-      "src": "/demo",
-      "status": 302,
-      "headers": {
-        "Location": "https://demo-navikko.vercel.app"
-      }
+      "source": "/app/(.*)",
+      "destination": "https://restaurant-app-xi-ashy.vercel.app/$1",
+      "permanent": false
     },
     {
-      "src": "/dev",
-      "status": 302,
-      "headers": {
-        "Location": "https://dev-navikko.vercel.app"
-      }
+      "source": "/demo",
+      "destination": "https://demo-navikko.vercel.app",
+      "permanent": false
     },
     {
-      "src": "/",
-      "dest": "/website/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/website/$1"
+      "source": "/dev",
+      "destination": "https://dev-navikko.vercel.app",
+      "permanent": false
     }
   ],
   "headers": [
