--- a/vercel.json
+++ b/vercel.json
@@ -76,7 +76,7 @@
       ]
     },
     {
-      "source": "/website/**/*.{js,css,png,jpg,jpeg,gif,svg,ico,woff,woff2}",
+      "source": "/website/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2))",
       "headers": [
         {
           "key": "Cache-Control",
@@ -85,7 +85,7 @@
       ]
     },
     {
-      "source": "/website/**/*.html",
+      "source": "/website/(.*\\.html)",
       "headers": [
         {
           "key": "Cache-Control",
