Fix Vercel deployment - hybrid approach for website and React app

--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,16 @@
   "version": 2,
   "builds": [
     {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/node"
     }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
@@ -21,7 +24,15 @@
       "destination": "/beta-promo-system.html"
     },
     {
-      "source": "/(.*)",
+      "source": "/app",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/app/(.*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/",
       "destination": "/index.html"
     }
   ],
