--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/static"
     },
     {
-      "src": "dist/**",
+      "src": "index.html",
       "use": "@vercel/static"
     }
   ],
@@ -18,14 +18,6 @@
     {
       "source": "/beta/(.*)",
       "destination": "/beta-promo-system.html"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/dist/$1"
-    },
-    {
-      "source": "/",
-      "destination": "/dist/index.html"
     }
   ],
   "headers": [
