--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
     {
       "src": "assets/**",
       "use": "@vercel/static"
+    },
+    {
+      "src": "AZ Dining Saku/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "logo/**",
+      "use": "@vercel/static"
     }
   ],
   "rewrites": [
