CRITICAL: Force complete rebuild with cache-busting to override unauthorized deployments

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "installCommand": "npm install",
+  "functions": {},
   "headers": [
     {
       "source": "/(.*)",
@@ -22,6 +24,10 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
         }
       ]
     }
