--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,8 @@ dist-ssr
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Enable local environment access for AI tools
-!.env.local
+.env.*
+!.env.example
+!env-template.txt
 .vercel
 env_beta
